@@ -1,3 +1,12 @@
+2005-01-25  Loren J. Rittle  <ljrittle@acm.org>
+
+	* acinclude.m4 (GLIBCXX_ENABLE_CLOCALE): Map FreeBSD to darwin
+	instead of generic.  Change autoconf report to "darwin or freebsd".
+	* configure: Regenerate.
+	* config/os/bsd/freebsd/ctype_inline.h (ctype<wchar_t>::do_is): Add.
+	(ctype<wchar_t>::do_scan_is): Likewise.
+	(ctype<wchar_t>::do_scan_not): Likewise.
+
 2005-01-25  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* acinclude.m4 (GLIBCXX_ENABLE_C99): Test for complex math
